Icon Maker, Hud, Game components

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,8 @@ DerivedDataCache/*
 /Plugins/AsyncMixin
 /Platforms
 /Build
+/Source
+README.md
+/Plugins/GameFeatures/LyraBattleArena/Intermediate
+/Plugins/GameFeatures/LyraBattleArena/Intermediate
+/Plugins/GameFeatures/LyraBattleArena/Intermediate/Build
