--- a/Plugins/GameFeatures/LyraBattleArena/Config/Tags/LyraBattleArena.ini
+++ b/Plugins/GameFeatures/LyraBattleArena/Config/Tags/LyraBattleArena.ini
@@ -3,4 +3,7 @@ GameplayTagList=(Tag="InputTag.Ability.1",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.2",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.3",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.4",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.ExtensionPoint.ChooseCharacter",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.ExtensionPoint.Players",DevComment="")
+GameplayTagList=(Tag="SetByCaller.CharacterID",DevComment="")
 
