--- a/Plugins/GameFeatures/LyraBattleArena/LyraBattleArena.uplugin
+++ b/Plugins/GameFeatures/LyraBattleArena/LyraBattleArena.uplugin
@@ -36,6 +36,14 @@
 		{
 			"Name": "Niagara",
 			"Enabled": true
+		},
+		{
+			"Name": "StructUtils",
+			"Enabled": true
+		},
+		{
+			"Name": "ModularGameplay",
+			"Enabled": true
 		}
 	]
 }
