phases,ability data component, lyra components, game documents

--- a/Plugins/GameFeatures/LyraBattleArena/Config/Tags/LyraBattleArena.ini
+++ b/Plugins/GameFeatures/LyraBattleArena/Config/Tags/LyraBattleArena.ini
@@ -1,9 +1,36 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="GameplayCue.LyraBattleArena.ChooseCharacter",DevComment="")
+GameplayTagList=(Tag="GameplayEvent.LyraBattleArena.ChooseCharacter",DevComment="")
+GameplayTagList=(Tag="GameplayEvent.LyraBattleArena.StartGameplay",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.1",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.2",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.3",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.4",DevComment="")
 GameplayTagList=(Tag="LyraBattleArena.ExtensionPoint.ChooseCharacter",DevComment="")
 GameplayTagList=(Tag="LyraBattleArena.ExtensionPoint.Players",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.GameplayMessage.CharacterID",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Gameplay",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Postgame",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Postgame.End",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Postgame.Start",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Pregame",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Pregame.End",DevComment="")
+GameplayTagList=(Tag="LyraBattleArena.Phases.Pregame.Start",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Ability1Cooldown",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Ability2Cooldown",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Ability3Cooldown",DevComment="")
+GameplayTagList=(Tag="SetByCaller.ActionSpeed",DevComment="")
+GameplayTagList=(Tag="SetByCaller.BasicAttackCooldown",DevComment="")
 GameplayTagList=(Tag="SetByCaller.CharacterID",DevComment="")
+GameplayTagList=(Tag="SetByCaller.CharacterLevel",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Defense",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Health",DevComment="")
+GameplayTagList=(Tag="SetByCaller.MaxHealth",DevComment="")
+GameplayTagList=(Tag="SetByCaller.MaxResource",DevComment="")
+GameplayTagList=(Tag="SetByCaller.MaxXP",DevComment="")
+GameplayTagList=(Tag="SetByCaller.MovementSpeed",DevComment="")
+GameplayTagList=(Tag="SetByCaller.PassiveCooldown",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Power",DevComment="")
+GameplayTagList=(Tag="SetByCaller.Resource",DevComment="")
+GameplayTagList=(Tag="SetByCaller.XP",DevComment="")
 
